@@ -1,3 +1,9 @@
+2001-09-25 Alexander Rawass <alexannika@users.sourceforge.net>
+
+	* added files kdirstat_{part,factory}.{cpp,h,rc}
+	* trying to make a kpart of kdirstat
+	* libtool does not work for me yet
+
 2001-08-20 Alexander Rawass <alexannika@users.sourceforge.net>
 
 	* modified configure.in.in to test for libqtreemap
